tests/ui/transmutability/malformed-program-gracefulness/wrong-type-assume.stderr
error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:49:51
   |
LL |     assert::is_transmutable::<Src, Dst, Context, {0u8}, false, false, false>();
   |                                                   ^^^ expected `bool`, found `u8`

error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:50:58
   |
LL |     assert::is_transmutable::<Src, Dst, Context, false, {0u8}, false, false>();
   |                                                          ^^^ expected `bool`, found `u8`

error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:51:65
   |
LL |     assert::is_transmutable::<Src, Dst, Context, false, false, {0u8}, false>();
   |                                                                 ^^^ expected `bool`, found `u8`

error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:52:72
   |
LL |     assert::is_transmutable::<Src, Dst, Context, false, false, false, {0u8}>();
   |                                                                        ^^^ expected `bool`, found `u8`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
